Fixing scrolling on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -22,8 +22,8 @@ body {
 main {
     width: 100vw;
     height: 100vh;
-    overflow-x: auto;
-    overflow-y: auto;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 #top-section {
